# totp-rs

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md
.github/workflows/: rust.yml
src/utils/: mod.rs
src/utils/i18n/: i18n.rs  mod.rs
src/utils/i18n/locales/: en.yml  zh.yml
src/utils/log/: log.rs  mod.rs
src/utils/totp/: mod.rs  totp.rs
tests/totp/: mod.rs  totp_test.rs
