[package]
name = "totp"
version = "0.1.0"
edition = "2021"

[dependencies]
base32 = "0.5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
sm3 = "0.4"
time = "0.3"
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"

[lib]
name = "totp-sm-rs"
path = "src/lib.rs"
